--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,5 +1,5 @@
-<h2>Create an Author</h2>
-<%= form_tag authors_path, method: "post" do %>
+<h2>Edit Author</h2>
+<%= form_tag authors_path(@author), method: "patch" do %>
   <% if @author.errors.any? %>
     <div id="error_explanation">
       <h3>There were some errors:</h3>
@@ -38,7 +38,7 @@
     <%= text_field_tag "phone_number", @author.phone_number %> 
   </div>
 
-  <%= submit_tag "Create"%>
+  <%= submit_tag "Update"%>
 
 <% end %>
- 
+
