--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,4 +1,11 @@
 <h2>Create an Author</h2>
+<% if @author.errors.any? %>
+    <ul>
+  <% @author.errors.full_messages.each do |error| %>
+    <li id= "error_explanation li"><%=error%></li>
+    <% end %>
+    </ul>
+<% end %>
 <%= form_tag authors_path, method: "post" do %>
   <div class="field">
     <%= label_tag "name", "Name" %>
