--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,25 +1,37 @@
 <h2>Create an Author</h2>
 <% if @author.errors.any? %>
-    <ul>
+    <div id="error_explanation">
   <% @author.errors.full_messages.each do |error| %>
-    <li id= "error_explanation li"><%=error%></li>
+    <li><%=error%></li>
     <% end %>
-    </ul>
+    </div>
 <% end %>
 <%= form_tag authors_path, method: "post" do %>
+  <% if @author.errors[:name].empty? %>
   <div class="field">
+  <% else %>
+  <div class="field_with_errors">
+  <% end %>
     <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name" %>
+    <%= text_field_tag "name", @author.name%>
   </div>
 
+   <% if @author.errors[:email].empty? %>
   <div class="field">
+  <% else %>
+  <div class="field_with_errors">
+  <% end %>
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
+    <%= text_field_tag "email", @author.email %>
   </div>
 
+   <% if @author.errors[:phone_number].empty? %>
   <div class="field">
+  <% else %>
+  <div class="field_with_errors">
+  <% end %>
     <%= label_tag "phone_number", "Phone Number" %>
-    <%= text_field_tag "phone_number" %>
+    <%= text_field_tag "phone_number", @author.phone_number %>
   </div>
 
   <%= submit_tag "Create" %>
