--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Create an Author</h2>
 
-<%= form_tag('/author') do %>
+<%= form_tag('/authors') do %>
   
   <% if @author.errors.any? %>
     <div id="error_explanation">
